ChangeLog

Version 5.3.0, 23 February 2024
[FEATURE] Make it possible to index content from additional tables in the pages and content element indexer, eg. for EXT:mask and EXT:bootstrap_package. Bootstrap package elements are pre-configured. Thanks for sponsoring to La Sierra University, https://github.com/tpwd/ke_search/issues/104
[FEATURE] Index files linked in "link" fields
[FEATURE] Add incremental indexer for tt_content records, https://github.com/tpwd/ke_search/issues/63
[BUGFIX]  Don't overwrite collected files, https://github.com/tpwd/ke_search/issues/150
[BUGFIX]  Avoid PHP warning "Undefined array key" for "alternative" and "description". Thanks to medarob, https://github.com/tpwd/ke_search/pull/215
[TASK]    Raise requirement of TYPO3 to 11.5.11, https://github.com/tpwd/ke_search/issues/208
[TASK]    Avoid instantiating of page indexer object in news indexer
[DOCS]    Add documentation about using custom labels

Version 5.2.1, 12 January 2024
[!!!]     The plugin base class has changed from Tpwd\KeSearch\Lib\Pluginbase to Tpwd\KeSearch\Plugins\PluginBase. This is a breaking change if you use the hook modifySearchWords and use typed variables. You will then have to adapt the type of that object in your hook.
[TASK]    Remove dependency to AbstractPlugin, https://github.com/tpwd/ke_search/issues/204
[TASK]    Remove usages of GeneralUtility::_GET, GeneralUtility::_GP, $_GET and $_POST, https://github.com/tpwd/ke_search/issues/205
[TASK]    Refactor id variable in BackendModuleController to make extension scanner happy
[TASK]    Add ignore annotations for extension scanner false positives
[TASK]    Replace usage of deprecated functions orX() and andX()
[TASK]    Add label to "Index Overview" widget (shown since TYPO3 12), and use only one color in the bar chart
[TASK]    Use ContextualFeedbackSeverity instead of AbstractMessage to set severity
[TASK]    Register upgrade wizards using attributes